--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,11 @@ x-airflow-common:
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
     AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@postgres/airflow
     _PIP_ADDITIONAL_REQUIREMENTS: ''
+    DWH_HOST: 'dwh_postgres'
+    DWH_PORT: 5432
+    DWH_DBNAME: dwh
+    DWH_USER: dwh
+    DWH_PASSWORD: dwh
   volumes:
     - ./dags:/opt/airflow/dags
     - ./share_data:/opt/airflow/share_data
@@ -29,6 +34,7 @@ x-airflow-common:
 services:
   dwh:
     image: postgres:latest
+    container_name: dwh_postgres
     restart: unless-stopped
     environment:
       POSTGRES_USER: dwh
